src/objects/Apttus_Config2__ProductFeature__c.object
<CustomObject>
    <description>Represents the association between a product and an feature set</description>
    <fields>
        <fullName>Apttus_Config2__FeatureSetId__c</fullName>
        <description>ID of the feature set  to which this product is associated</description>
        <inlineHelpText>ID of the feature set  to which this product is associated</inlineHelpText>
        <label>Feature Set</label>
        <referenceTo>Apttus_Config2__FeatureSet__c</referenceTo>
        <relationshipLabel>Product Features</relationshipLabel>
        <relationshipName>ProductFeatures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncludedFeatures__c</fullName>
        <description>holds the included features and their value</description>
        <inlineHelpText>holds the included features and their value</inlineHelpText>
        <label>Included Features</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product associated with the feature set</description>
        <inlineHelpText>ID of the product associated with the feature set</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Features</relationshipLabel>
        <relationshipName>ProductFeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Feature</label>
    <nameField>
        <label>Product Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>